# jsonox

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-release.yml  create_tag_and_release.yml
src/: main.rs
src/constants/: app_metadata.rs  paths.rs
src/controllers/: rest.rs
src/models/: app_state.rs  mod.rs  server_error.rs
src/utils/: banner.rs  cli.rs  fsutils.rs  mod.rs  tutorial.rs
