[package]
name = "jsonox"
version = "0.1.0"
authors = ["Nilay Savant <nilayofficial@gmail.com>"]
edition = "2018"
description = "RESTful JSON server + store written in Rust"
repository = "https://github.com/nilaysavant/jsonox"
readme = "README.md"
license-file = "LICENSE"
keywords = ["json", "json-server", "json-store", "mock-server", "actix-web"]
categories = ["command-line-utilities", "development-tools", "database-implementations","filesystem", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde_json = "1.0"
derive_more = "0.99.11"
log = "0.4.13"
env_logger = "0.8"
relative-path = "1.3.2"
clap = "2.33.3"
walkdir = "2.3.1"
